@@ -1,12 +1,14 @@
 mklibs (0.1.27) UNRELEASED; urgency=low
 
-  * Apply patches from Joseph S. Myers. (#469070)
+  * Apply patches from Joseph S. Myers. (Closes: #469070)
     - mklibs-readelf: Uninitialized data fix
     - mklibs-readelf: Endian fix
     - mklibs: Add --sysroot, to locate all libraries and other related input
       files relative to a specified root directory rather than /.
     - mklibs: Add --gcc-options and --libdir options as well.
     - mklibs: Correct diagnostic text when symbol cannot be found.
+    - mklibs: Ignore missing symbols from libthread_db, which are defined
+      in the application that uses it.
   * Document --root in the man page.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 25 Mar 2008 16:10:34 -0400
